Fixed Title Bar being Cutoff #8

--- a/discorddark.css
+++ b/discorddark.css
@@ -838,7 +838,7 @@ button.bd-addon-button:not(.bd-link):not(.bd-button-danger):hover, .bd-view-butt
 }
 
 .base-2jDfDU {
-  top: -8px;
+  top: 0px;
   height: 101vh;
 }
 
